# soundcloud-desktop-app

./: LICENSE  README.md  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: soundcloud.icns
src-tauri/src/: lib.rs
